# Arithmetic_09

./: CMakeLists.txt  lcov.info
src/: ArithmeticOperations.cpp  ArithmeticOperations.h  main.cpp
test/: ArithmeticOperationsTest.cpp
